ho messo qualcosa

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,8 @@
 {\large Corso: Sperimentazioni di Fisica 1 - Canale M-Z.} \\
 {\large Anno accademico: 2022-23. Docenti: D. Mengoni, M. Doro} \\[2em]
 
-Gruppo XX \\
+
+Gruppo XI \\
 Emilio Manzotti - Nr. Matricola - emilio.manzotti@studenti.unipd.it \\
 Greta Spanò - Nr. Matricola - greta.spano@studenti.unipd.it \\
 Marilena Santarossa - Nr. Matricola - marilena.santarossa@studenti.unipd.it \\[1em]
@@ -42,6 +43,25 @@ Data: 10/12/2023
 \section{Realizzazione e messa in opera dell’apparato. Campagne di presa e analisi dati di controllo.}
 % [Max 5-6 pagine] 
 % Descrivere brevemente l’apparato realizzato, le soluzioni utilizzate. Descrive in dettaglio i test svolti per la valutazioni della precisione dell’apparato e della valutazione degli errori sistematici nello strumento, nel modello di riferimento, nella misura e nella lettura. In particolare rispondere a queste domande: Il modello matematico del pendolo semplice e’ accurato entro la precisione sperimentale? Il pendolo smorza l’oscillazione in maniera significativa? Di quanto? Quale pu`o essere la causa? Influisce sulla stima del misurando? Il pendolo rallenta in maniera significativa? Di quanto? Quale puo’ essere la causa? Influisce sulla stima del misurando?
+Un pendolo semplice è detto ideale quando presenta le seguenti caratteristiche: $\\$
+
+\begin{enumerate}
+    \item Essere vincolato ad un perno fisso O
+    \item Essere costituito di un filo inestensibile, privo di massa e perfettamente flessibile
+    \item Possedere all’estremità un punto materiale di massa m
+\end{enumerate}
+Chiaramente queste condizioni non saranno mai perfettamente riproducibili, sia perché gli strumenti che abbiamo a disposizione in laboratorio sono limitanti, sia perché il laboratorio stesso non è uno spazio ideale immerso nel vuoto. In particolare dobbiamo prendere atto di una serie di fattori che ci allontanano dalla condizione ideale, su cui il nostro margine di intervento è risicato:
+\begin{itemize}
+    \item Il laboratorio in cui ci troviamo è una camera riempita di una miscela di gas e come tale, durante il moto del pendolo, esercita attrito viscoso su tutte le componenti. Se ci trovassimo all’aperto il vento influenzerebbe alquanto sensibilmente il moto del pendolo, ad ogni modo anche in un ambiente chiuso come il laboratorio, essendo in tanti e in costante movimento, si generano perturbazioni nell’aria che influiscono sulla traiettoria dello strumento.
+    \item La massa che abbiamo a disposizione è un cilindretto metallico, non un punto materiale, di conseguenza subirà l’attrito dell’aria e l’azione della spinta di archimede, inoltre sorge il dubbio di di come come misurare la lunghezza del sistema massa-filo: un’estremità è il perno, ma l’altra è l’attaccatura del pesetto al filo, o il baricentro, o il centro di massa (ma nulla garantisce che il pesetto abbia densità uniforme, quindi sarebbe complesso da calcolare) oppure la base inferiore del pesetto.
+    \item Il filo è una semplice cordicella, anch’esso ha una massa e occupa un volume quindi subirà l’attrito dell’aria e la forza di archimede, non sarà mai completamente inestensibile, ma anzi avrà un suo coefficiente di elasticità, il suo comportamento durante il moto è alquanto imprevedibile, potrebbe allungarsi, accorciarsi, ma anche torcersi su sé stesso.
+    \item Il perno non è mai perfettamente fisso. Possiamo cercare di fissare al meglio il filo sul supporto metallico, ma non ci si può certo aspettare che questo stia perfettamente immobile, potrebbe addirittura cedere un po’ aumentando la lunghezza del filo. Il perno influenzerà anche il moto in sè, perché esercita un attrito che contribuisce allo smorzamento.
+\end{itemize}
+
+Tenendo conto di tutti questi fattori, abbiamo cercato di adottare una serie di accortezze. Abbiamo posizionato il filo lungo la parte inferiore del supporto e l’abbiamo fissato per mezzo di due fascette che abbiamo stretto con forza, poi per evitare che il filo scorresse l’abbiamo attaccato al pilastro verticale con dello scotch. Annodare il filo al perno avrebbe prodotto risultati di gran lunga meno soddisfacenti: durante il moto sicuramente il nodo sarebbe oscillato, il cappio avrebbe ruotato intorno al supporto e si sarebbe facilmente allentato. Un altro frangente su cui siamo intervenuti è il metodo di rilascio del pesetto per innescare l’oscillazione. Il modello matematico che abbiamo scelto di utilizzare afferma che le piccole oscillazioni (< 20 gradi) sono isocrone, ovvero non dipendono dall’angolo iniziale di lancio. Tuttavia è fondamentale che la traiettoria della massa si limiti il più possibile a seguire il piano della verticale. Dovendo eseguire tante misure abbiamo ideato un modo per assicurarci di lanciare il pesetto sempre dallo stesso punto, con la stessa ampiezza di oscillazione e sempre lungo il piano della verticale. Con lo scotch, abbiamo fissato al piano di lavoro una squadretta che sporgesse per metà all’esterno, la sua posizione è stata scelta in modo che l’ampiezza dell’angolo di lancio ci fosse nota e rispettasse i canoni dell’approssimazione a piccole oscillazioni. Inoltre, abbiamo misurato la distanza tra il pesetto in stato di quiete e il margine del tavolo, così grazie al lato centimetrato della squadretta è possibile far partire il lancio più o meno lungo il piano della verticale assicurandoci una traiettoria il più possibile regolare. In questo modo la squadretta serve anche come punto di riferimento per osservare lo smorzamento dell’oscillazione.$\\$
+Così abbiamo studiato la procedura migliore per rilasciare il pesetto e abbiamo osservato che il risultato più soddisfacente si ottiene rilasciando la massa non a mano libera, ma ponendo un ostacolo (nel nostro caso un righello) come “transenna di lancio” che una volta abbassato fa partire il pendolo senza imprimergli accelerazioni o vibrazioni. $\\$ $\\$
+A questo punto abbiamo iniziato ad eseguire i test. Prima di tutto abbiamo cercato di capire dopo quante oscillazioni il moto del pendolo iniziava a smorzarsi, secondo quanto abbiamo intuito osservando il pendolo ad occhio, ciò accadeva dopo circa quattro cinque o sei oscillazioni. 
+
 
 \subsection{Test}
 
