ho aggiunto lololo

--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@ Data: 10/12/2023
 
 \section*{Stima della accelerazione di gravità con misure ripetute di periodo di oscillazione di un pendolo semplice}
 % write an introduction
-
+lololol
 
 \section{Indagine del problema fisico e Ideazione di una misura: Obiettivo e metodologia dell’esperienza}
 % [Max 2-3 pagine] 
